...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="eOa-Ib-fHX">
                                <rect key="frame" x="0.0" y="44" width="414" height="51.5"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KJi-1u-yl8">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="FetchCharactersButton"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Fetch Characters"/>
                                        <connections>
                                            <action selector="onFetchCharactersButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hKM-nW-tUs"/>
                                        </connections>
                                    </button>
...
